--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ sphinxawesome-theme = "^5.1.5"
 sphinx-design = "^0.6.0"
 sphinx-togglebutton = "^0.3.2"
 bump2version = "^1.0.1"
-pydantic = "^2.7.2"
+sphinx-autobuild = "^2024.10.3"
+myst-parser = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
