--- a/.github/workflows/publish_to_pypi.yaml
+++ b/.github/workflows/publish_to_pypi.yaml
@@ -24,8 +24,8 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Install Poetry
-      uses: python-poetry/install@v1
+    - name: Install and configure Poetry
+      uses: snok/install-poetry@v1
       with:
         version: 1.8.2
     
@@ -48,8 +48,8 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install Poetry
-        uses: python-poetry/install@v1
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
         with:
           version: 1.8.2
 
@@ -75,8 +75,8 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Install Poetry
-      uses: python-poetry/install@v1
+    - name: Install and configure Poetry
+      uses: snok/install-poetry@v1
       with:
         version: 1.8.2
 
