--- a/environment.yaml
+++ b/environment.yaml
@@ -1,6 +1,6 @@
 # This file is provided to streamline Conda virtual environment generation
 # Using conda (instead of poetry) is necessary to install Pygmo and access IPOPT/SNOPT
-name: coolpropx_env
+name: jaxprop_env
 channels:
  - conda-forge
 dependencies:
