--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ matplotlib = "^3.10.6"
 CoolProp = "^7.0.0"
 pysolver_view = "^0.6.8"
 #pysolver_view = { path = "../pysolver_view/", develop = true }
+tqdm = "^4.67.1"
 
 
 [tool.poetry.group.dev.dependencies]
